--- a/src/views/event/event.less
+++ b/src/views/event/event.less
@@ -110,6 +110,26 @@
           }
       }
   }
+  .noMore{
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .dataNull{
+      flex: 1;
+      color: #9A9A9A;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      p{
+        font-size: 50px;
+      }
+      span{
+        padding: 16px 0;
+      }
+  }
   .cellItem{
     //   height: 136px;
       border-radius: 10px;
@@ -326,7 +346,7 @@
     color: #2B699D !important;
 }
 .GradeType{
-    height: 132px !important;
+    // height: 132px !important;
     .warnType()
 }
 .GradeBtn{
