--- a/src/views/workOrder/workOrder.less
+++ b/src/views/workOrder/workOrder.less
@@ -19,3 +19,12 @@
         }
     }
 }
+.nav{
+    height: 44px;
+    background: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+  }
