--- a/src/views/control/control.less
+++ b/src/views/control/control.less
@@ -144,6 +144,20 @@
           }
       }
   }
+  .dataNull{
+    height: 392px;
+    color: #9A9A9A;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    p{
+      font-size: 50px;
+    }
+    span{
+      padding: 16px 0;
+    }
+} 
   .cellItem{
     //   height: 136px;
       border-radius: 10px;
