--- a/src/assets/css/popup.less
+++ b/src/assets/css/popup.less
@@ -238,7 +238,7 @@
     width: 100%;
     height: 38px;/*no*/
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
 }
 .popupAreaInformation-LevelAsh{
