--- a/src/views/Statistics/Statistics.less
+++ b/src/views/Statistics/Statistics.less
@@ -82,6 +82,11 @@
     height: 100%;
     }  
 }
+.gap{
+    height: 10px;
+    width: 100%;
+    background: #F0F0F0;
+  }
 .warnType{
     height: 220px;
     overflow-y: scroll;
