--- a/src/views/event/event.less
+++ b/src/views/event/event.less
@@ -19,7 +19,7 @@
 .DropdownMenu{
     box-sizing: border-box;
     padding: 0 4%;
-    background-color: #f0f0f0;
+    background-color: #fff;
     display: flex;
     align-items: center;
     & /deep/ .van-dropdown-menu__title--active{
